--- a/src/components/Timeline/Timeline.module.css
+++ b/src/components/Timeline/Timeline.module.css
@@ -5,6 +5,7 @@
   min-height: 100dvh;
   padding: 5% 10%;
   gap: 3rem;
+  background-color: var(--light);
 }
 
 .timelineContainer header {
@@ -30,7 +31,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: var(--light);
+  background-color: var(--white);
   padding: 2rem;
 }
 
