--- a/src/components/Event/Event.module.css
+++ b/src/components/Event/Event.module.css
@@ -60,7 +60,7 @@
 
 .eventContent > div .list .item {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     gap: 1rem;
 }
