--- a/src/components/Speakers/Speakers.module.css
+++ b/src/components/Speakers/Speakers.module.css
@@ -45,6 +45,9 @@
     max-width: 60%;
 }
 
+.speakersContainer > a:hover {
+    opacity: .8;
+}
 @media screen and (min-width: 768px) {
     .speakersContent > div {
         max-width: 25%;
