--- a/src/components/Workshops/Workshops.module.css
+++ b/src/components/Workshops/Workshops.module.css
@@ -53,7 +53,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .workshopItem {
-    min-width: 45%;
+  .workshopItem article {
+    max-width: 45%;
   }
 }
